switched from css to Sass

--- a/css/main.css
+++ b/css/main.css
@@ -1,47 +1,4 @@
-@import url("reset.css");
-@import url("fonts.css");
+@import "partials/reset";
 
-body {
-	background: #fff;
-	color: #000;
-	font-size: 1em; /* default: 16px = 1em */
-	font-family: sans-serif;
-	letter-spacing: 0;
-	font-weight: normal;
-	}
-
-a 	{
-	color: blue;
-	}
-
-img {
-	max-width: 100%;
-	display: block;
-}
-
-#wrap {
-	margin: 0 auto;
-	width: 100%;
-}
-
-/* nav */
-
-nav {
-
-}
-
-/* main */
-
-#main {
-
-}
-
-/* footer */
-
-footer {
-	
-}
-
-/* Media Queries */
-
-@media screen and (min-width: 640px) {}
+@import "partials/base";
+@import "partials/fonts";
