bugfix, missing ; in _base.scss

--- a/css/partials/_base.scss
+++ b/css/partials/_base.scss
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-	background-color: $bg-color
+	background-color: $bg-color;
 	color: $primary-color;
 	font-family: $font-regular;
 	font-size: 1em; /* default: 16px = 1em */
