--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,7 @@
+@import "modules/variables";
+@import "modules/mixins";
+
 @import "partials/reset";
-@import "partials/variables";
-@import "partials/mixins";
 
 @import "partials/base";
 @import "partials/fonts";
