--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -1,4 +1,31 @@
 #wrap {
 	margin: 0 auto;
+  padding: 0 20px;
 	width: 100%;
+}
+
+.outer {
+  max-width: 960px;
+  min-width: 700px;
+  margin: 0 auto;
+}
+
+.inner {
+  width: 700px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 819px) {
+	.outer {
+	  min-width: auto;
+	}
+	.inner {
+		width: auto;
+		min-width: auto;
+	}
+}
+
+#content {
+	clear: both;
+	padding: 4em 0;
 }
