--- a/css/main.css
+++ b/css/main.css
@@ -389,6 +389,24 @@ template {
 [hidden] {
   display: none; }
 
+.reset-button {
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+  background: transparent;
+  /* inherit font & color from ancestor */
+  color: inherit;
+  font: inherit;
+  /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+  line-height: normal;
+  /* Corrects font smoothing for webkit */
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+  /* Corrects inability to style clickable `input` types in iOS */
+  -webkit-appearance: none; }
+
 html {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -401,14 +419,15 @@ html {
 body {
   background-color: #fff;
   color: #000;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Montserrat", "Helvetica Neue", sans-serif;
   font-size: 1em;
   /* default: 16px = 1em */
   font-weight: normal;
   letter-spacing: 0; }
 
 a {
-  color: blue; }
+  color: blue;
+  text-decoration: none; }
 
 img {
   max-width: 100%;
@@ -423,7 +442,7 @@ img {
     display: block;
     width: 60px;
     height: 60px;
-    margin: 20px;
+    margin-left: 20px;
     background: url("/assets/elements/logo.png") 0 0 no-repeat;
     background: url("/assets/elements/logo.svg") 0 0 no-repeat, linear-gradient(transparent, transparent); }
     #logo a:hover {
@@ -432,6 +451,116 @@ img {
       /* IE 8 */
       filter: alpha(opacity=70);
       /* IE 5-7 */ }
+
+/*! Typebase.less v0.1.0 | MIT License */
+/* Setup */
+html {
+  font-size: 125%;
+  -webkit-font-smoothing: antialiased;
+  text-align: left; }
+
+/* Copy & Lists */
+p {
+  line-height: 1.5rem;
+  margin-top: 1.5rem;
+  margin-bottom: 0; }
+
+ul,
+ol {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem; }
+
+ul li,
+ol li {
+  line-height: 1.5rem; }
+
+ul ul,
+ol ul,
+ul ol,
+ol ol {
+  margin-top: 0;
+  margin-bottom: 0; }
+
+blockquote {
+  line-height: 1.5rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem; }
+
+/* Headings */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", "Helvetica Neue", sans-serif;
+  margin-top: 1.5rem;
+  margin-bottom: 0;
+  line-height: 1.5rem;
+  text-align: center; }
+
+h1 {
+  font-size: 4.242rem;
+  line-height: 4.5rem;
+  margin-top: 3rem; }
+
+h2 {
+  font-size: 1.6rem;
+  line-height: 2rem;
+  margin-top: 3rem;
+  color: #ccc;
+  text-transform: uppercase;
+  letter-spacing: 0.05rem; }
+
+h3 {
+  font-size: 1.2rem;
+  font-weight: normal; }
+
+h4 {
+  font-size: .8rem;
+  font-weight: normal;
+  margin-top: 0rem; }
+
+h5 {
+  font-size: 1rem;
+  font-family: "Montserrat", "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+  font-weight: normal;
+  color: #ccc;
+  letter-spacing: 0.25rem; }
+
+/* Tables */
+table {
+  margin-top: 1.5rem;
+  border-spacing: 0px;
+  border-collapse: collapse; }
+
+table td,
+table th {
+  padding: 0;
+  line-height: 33px; }
+
+/* Code blocks */
+code {
+  vertical-align: bottom; }
+
+/* Leading paragraph text */
+.lead {
+  font-size: 1.414rem; }
+
+/* Hug the block above you */
+.hug {
+  margin-top: 0; }
+
+.cap {
+  text-transform: capitalize; }
+
+.smallprint {
+  font-size: .8rem;
+  line-height: 1.5; }
+
+strong {
+  font-weight: bold; }
 
 #wrap {
   margin: 0 auto;
@@ -467,7 +596,7 @@ img {
   -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.25);
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.25); }
 
-a.menu-link {
+#navicon {
   text-indent: -9999em;
   float: right;
   display: block;
@@ -478,68 +607,69 @@ a.menu-link {
   top: 35px;
   right: 15px; }
 
-nav#main[role=navigation] li {
-  flex-grow: 1;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 0.8em;
-  text-transform: uppercase;
-  letter-spacing: 0.2em; }
-  nav#main[role=navigation] li a {
-    display: block;
-    color: #000;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease; }
+.hidden {
+  display: none !important; }
 
-nav#main[role=navigation] {
+.shown {
+  display: block; }
+
+#mainnav {
   clear: both;
   width: 100%; }
-
-nav#main[role=navigation] li.current a,
-nav#main[role=navigation] li a:hover {
-  opacity: 0.7;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-  /* IE 8 */
-  filter: alpha(opacity=70);
-  /* IE 5-7 */ }
+  #mainnav li {
+    flex-grow: 1;
+    font-family: "Montserrat", "Helvetica Neue", sans-serif;
+    font-size: 0.8em;
+    text-transform: uppercase;
+    letter-spacing: 0.2em; }
+    #mainnav li a {
+      display: block;
+      color: #000;
+      -webkit-transition: all 0.3s ease;
+      -moz-transition: all 0.3s ease;
+      -ms-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+  #mainnav li.current a,
+  #mainnav li a:hover {
+    opacity: 0.7;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
+    /* IE 8 */
+    filter: alpha(opacity=70);
+    /* IE 5-7 */ }
 
 @media screen and (max-width: 819px) {
-  .js nav#main[role=navigation] {
-    overflow: hidden;
-    max-height: 0; }
-  nav#main[role=navigation] {
+  #mainnav {
     position: relative;
     top: 70px;
     background: #fff;
     z-index: 99; }
-  nav#main[role=navigation].active {
-    max-height: 24em; }
-  nav#main[role=navigation] ul {
-    text-align: center;
-    border-top: 1px solid #efefef; }
-  nav#main[role=navigation] li {
-    border-bottom: 1px solid #efefef; }
-  nav#main[role=navigation] li a {
-    padding: 2em 0; }
-  nav#main[role=navigation] li.current a,
-  nav#main[role=navigation] li a:hover {
-    background: #efefef; } }
+    #mainnav ul {
+      text-align: center;
+      border-top: 1px solid #efefef; }
+    #mainnav li {
+      border-bottom: 1px solid #efefef; }
+    #mainnav a {
+      padding: 2em 0; }
+    #mainnav li.current a,
+    #mainnav li a:hover {
+      background: #efefef; }
+  #mainnav.active {
+    max-height: 24em; } }
 
 @media screen and (min-width: 820px) {
   a.menu-link {
     display: none;
     height: 0; }
-  nav#main[role=navigation] {
+  #mainnav {
     margin: 40px 0; }
-  nav#main[role=navigation] ul {
-    display: flex;
-    flex-direction: row; }
-  nav#main[role=navigation] li {
-    display: inline-block;
-    text-align: center;
-    margin: 0 0.5em; } }
+    #mainnav ul {
+      display: flex;
+      flex-direction: row; }
+    #mainnav li {
+      display: inline-block;
+      text-align: center;
+      margin: 0 0.5em; } }
 
 footer {
   border-top: 1px solid #efefef;
@@ -552,7 +682,7 @@ footer {
   footer li {
     display: inline;
     margin: 0 1em;
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, sans-serif;
+    font-family: "Montserrat", "Helvetica Neue", sans-serif;
     font-size: 0.8em;
     text-transform: uppercase;
     letter-spacing: 0.2em; }
