--- a/css/partials/_base.scss
+++ b/css/partials/_base.scss
@@ -10,36 +10,20 @@ html {
 }
 
 body {
-	background-color: $background;
-	color: $primary;
-	font-family: $font-stack;
-	font-size: 1em; /* default: 16px = 1em */
-	font-weight: normal;
-	letter-spacing: 0;
-	}
+  background-color: $background;
+  color: $primary;
+  font-family: $font;
+  font-size: 1em; /* default: 16px = 1em */
+  font-weight: normal;
+  letter-spacing: 0;
+  }
 
-a 	{
-	color: $link;
-	}
+a {
+  color: $link;
+  text-decoration: none;
+  }
 
 img {
-	max-width: 100%;
-	display: block;
-}
-
-#logo {
-    text-indent: -9999em;
-    display: block;
-    width: 100px;
-    position: fixed;
-    a {
-      display: block;
-      width: 60px;
-      height: 60px;
-      margin: 20px;
-      background: url("/assets/elements/logo.png") 0 0 no-repeat;
-      background: url("/assets/elements/logo.svg") 0 0 no-repeat,
-        linear-gradient(transparent, transparent);
-        &:hover { @include opacity(.7); }
-    }
+  max-width: 100%;
+  display: block;
 }
