--- a/css/partials/_nav.scss
+++ b/css/partials/_nav.scss
@@ -6,10 +6,7 @@
 	@include box-shadow(0, 1px, 10px, rgba(0, 0, 0, 0.25));
 }
 
-
-// MAIN NAV
-
-a.menu-link {
+#navicon {
     text-indent: -9999em;
     float: right;
     display: block;
@@ -21,72 +18,66 @@ a.menu-link {
     right: 15px;
 }
 
-// GENERAL
 
-nav#main[role=navigation] li {
-  flex-grow: 1;
-  font-family: $font-stack;
-  font-size: 0.8em;
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-  a {
-      display: block;
-      color: $primary;
-      @include transition(all .3s ease);
-  }
+// toggle
+.hidden { display: none !important; }
+.shown { display: block; }
 
-}
 
-nav#main[role=navigation] {
+// general
+
+#mainnav {
   clear: both;
   width: 100%;
+  li {
+    flex-grow: 1;
+    font-family: $font;
+    font-size: 0.8em;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    a {
+        display: block;
+        color: $primary;
+        @include transition(all .3s ease);
+      }
+    }
+    li.current a,
+    li a:hover {
+      @include opacity(.7);
+    }
 }
 
-nav#main[role=navigation] li.current a,
-nav#main[role=navigation] li a:hover {
-  @include opacity(.7);
-}
 
-
-// MOBILE
+// mobile
 
 @media screen and (max-width: 819px) {
-  .js nav#main[role=navigation] {
-    overflow: hidden;
-    max-height: 0;
-  }
-
-  nav#main[role=navigation] {
+  #mainnav {
     position: relative;
     top: 70px;
     background: #fff;
     z-index: 99;
+    ul {
+      text-align: center;
+      border-top: 1px solid $light;
+    }
+    li {
+      border-bottom: 1px solid $light;
+    }
+    a {
+      padding: 2em 0;
+    }
+    li.current a,
+    li a:hover {
+        background: $light;
+      }
   }
 
-  nav#main[role=navigation].active {
+  #mainnav.active {
     max-height: 24em;
-  }
-
-  nav#main[role=navigation] ul {
-    text-align: center;
-    border-top: 1px solid $light;
-  }
-
-  nav#main[role=navigation] li {
-    border-bottom: 1px solid $light;
-  }
-
-  nav#main[role=navigation] li a {
-    padding: 2em 0;
-  }
-
-  nav#main[role=navigation] li.current a,
-  nav#main[role=navigation] li a:hover {
-    background: $light;
   }
 }
 
-// DESKTOP
+// desktop
 
 @media screen and (min-width: 820px) {
 
@@ -95,44 +86,16 @@ nav#main[role=navigation] li a:hover {
      height: 0;
   }
 
-  nav#main[role=navigation] {
+  #mainnav {
     margin: 40px 0;
-  }
-
-  nav#main[role=navigation] ul {
-    display: flex;
-    flex-direction: row;
-  }
-
-  nav#main[role=navigation] li {
-    display: inline-block;
-    text-align: center;
-    margin: 0 0.5em;
-  }
-}
-
-
-// FOOTER
-
-footer {
-  border-top: 1px solid $light;
-  padding: 2em 0;
-  margin-top: 8em;
-  ul {
-    list-style: none;
-    margin: 0;
-    text-align: center;
-  }
-  li {
-    display: inline;
-    margin: 0 1em;
-    font-family: $font-stack;
-    font-size: 0.8em;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
-    a {
-      color: lighten($primary, 50%);
-      text-transform: uppercase;
+    ul {
+      display: flex;
+      flex-direction: row;
+    }
+    li {
+      display: inline-block;
+      text-align: center;
+      margin: 0 0.5em;
     }
   }
 }
