--- a/css/modules/_variables.scss
+++ b/css/modules/_variables.scss
@@ -1,5 +1,5 @@
-$font-stack: 'Montserrat', 'Helvetica Neue', Helvetica, sans-serif;
-$font-display: Georgia, Serif;
+$font: 'Montserrat', 'Helvetica Neue', sans-serif;
+$header: 'Montserrat', 'Helvetica Neue', sans-serif;
 
 $primary:     #000;
 $secondary:   #ccc;
