--- a/css/main.css
+++ b/css/main.css
@@ -437,12 +437,13 @@ img {
   text-indent: -9999em;
   display: block;
   width: 100px;
-  position: fixed; }
+  position: fixed;
+  top: 20px;
+  left: 20px; }
   #logo a {
     display: block;
     width: 60px;
     height: 60px;
-    margin-left: 20px;
     background: url("/assets/elements/logo.png") 0 0 no-repeat;
     background: url("/assets/elements/logo.svg") 0 0 no-repeat, linear-gradient(transparent, transparent); }
     #logo a:hover {
@@ -455,7 +456,7 @@ img {
 /*! Typebase.less v0.1.0 | MIT License */
 /* Setup */
 html {
-  font-size: 125%;
+  font-size: 100%;
   -webkit-font-smoothing: antialiased;
   text-align: left; }
 
@@ -496,38 +497,23 @@ h6 {
   font-family: "Montserrat", "Helvetica Neue", sans-serif;
   margin-top: 1.5rem;
   margin-bottom: 0;
-  line-height: 1.5rem;
+  line-height: 1;
   text-align: center; }
 
 h1 {
-  font-size: 4.242rem;
-  line-height: 4.5rem;
+  font-size: 3rem;
   margin-top: 3rem; }
 
 h2 {
-  font-size: 1.6rem;
+  font-size: 2rem;
   line-height: 2rem;
-  margin-top: 3rem;
-  color: #ccc;
-  text-transform: uppercase;
-  letter-spacing: 0.05rem; }
+  margin-top: 3rem; }
 
 h3 {
-  font-size: 1.2rem;
-  font-weight: normal; }
+  font-size: 1.5rem; }
 
-h4 {
-  font-size: .8rem;
-  font-weight: normal;
-  margin-top: 0rem; }
-
-h5 {
-  font-size: 1rem;
-  font-family: "Montserrat", "Helvetica Neue", sans-serif;
-  text-transform: uppercase;
-  font-weight: normal;
-  color: #ccc;
-  letter-spacing: 0.25rem; }
+h4, h5 {
+  font-size: 1rem; }
 
 /* Tables */
 table {
@@ -605,17 +591,22 @@ strong {
   background: url("/assets/elements/menu_icon.svg") 0 0 no-repeat;
   position: relative;
   top: 35px;
-  right: 15px; }
-
-.hidden {
-  display: none !important; }
+  right: 20px; }
 
 .shown {
   display: block; }
 
+@media screen and (max-width: 819px) {
+  .hidden {
+    display: none !important; } }
+
 #mainnav {
   clear: both;
   width: 100%; }
+  #mainnav ul {
+    list-style: none;
+    padding: none;
+    padding: 0; }
   #mainnav li {
     flex-grow: 1;
     font-family: "Montserrat", "Helvetica Neue", sans-serif;
@@ -658,7 +649,7 @@ strong {
     max-height: 24em; } }
 
 @media screen and (min-width: 820px) {
-  a.menu-link {
+  #navicon {
     display: none;
     height: 0; }
   #mainnav {
