--- a/css/partials/_nav.scss
+++ b/css/partials/_nav.scss
@@ -15,13 +15,17 @@
     background: url("/assets/elements/menu_icon.svg") 0 0 no-repeat;
     position: relative;
     top: 35px;
-    right: 15px;
+    right: 20px;
 }
 
 
 // toggle
-.hidden { display: none !important; }
+
 .shown { display: block; }
+
+@media screen and (max-width: 819px) {
+  .hidden { display: none !important; }
+}
 
 
 // general
@@ -29,6 +33,11 @@
 #mainnav {
   clear: both;
   width: 100%;
+  ul {
+    list-style: none;
+    padding: none;
+    padding: 0;
+  }
   li {
     flex-grow: 1;
     font-family: $font;
@@ -81,7 +90,7 @@
 
 @media screen and (min-width: 820px) {
 
-  a.menu-link {
+  #navicon {
      display: none;
      height: 0;
   }
