--- a/css/partials/_typography.scss
+++ b/css/partials/_typography.scss
@@ -2,7 +2,7 @@
 
 /* Setup */
 html {
-  font-size: 125%;
+  font-size: 100%;
   -webkit-font-smoothing: antialiased;
   text-align: left;
 }
@@ -44,38 +44,23 @@ h6 {
   font-family: $header;
   margin-top: 1.5rem;
   margin-bottom: 0;
-  line-height: 1.5rem;
+  line-height: 1;
   text-align: center;
 }
 h1 {
-  font-size: 4.242rem;
-  line-height: 4.5rem;
+  font-size: 3rem;
   margin-top: 3rem;
 }
 h2 {
-  font-size: 1.6rem;
+  font-size: 2rem;
   line-height: 2rem;
   margin-top: 3rem;
-  color: $secondary;
-  text-transform: uppercase;
-  letter-spacing: 0.05rem;
 }
 h3 {
-  font-size: 1.2rem;
-  font-weight: normal;
+  font-size: 1.5rem;
 }
-h4 {
-  font-size: .8rem;
-  font-weight: normal;
-  margin-top: 0rem;
-}
-h5 {
+h4, h5 {
   font-size: 1rem;
-  font-family: $header;
-  text-transform: uppercase;
-  font-weight: normal;
-  color: $secondary;
-  letter-spacing: 0.25rem;
 }
 
 /* Tables */
