major re-facture

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,9 +5,8 @@
 @import "partials/resets";
 
 @import "partials/base";
-@import "partials/logo";
 @import "partials/fonts";
-@import "partials/typography";
+@import "partials/typebase";
 
 @import "partials/layout";
 @import "partials/nav";
