--- a/assets/css/modules/_variables.scss
+++ b/assets/css/modules/_variables.scss
@@ -1,8 +1,12 @@
-$font: 'Montserrat', 'Helvetica Neue', sans-serif;
-$header: 'Montserrat', 'Helvetica Neue', sans-serif;
+$font: 'Montserrat',
+'Helvetica Neue',
+sans-serif;
+$header: 'Montserrat',
+'Helvetica Neue',
+sans-serif;
 
-$primary:     #000;
-$secondary:   #ccc;
-$light:       #efefef;
-$link:        blue;
-$background:  #fff;
+$prim: #000;
+$seco: #ccc;
+$lite: #efefef;
+$link: blue;
+$bgco: #fff;
