--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -407,51 +407,32 @@ template {
   /* Corrects inability to style clickable `input` types in iOS */
   -webkit-appearance: none; }
 
-html {
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  text-rendering: optimizeLegibility; }
-
-*, *:before, *:after {
+*,
+*:after,
+*:before {
   box-sizing: inherit; }
 
+html,
 body {
-  background-color: #fff;
+  height: 100%; }
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
+
+body {
   color: #000;
   font-family: "Montserrat", "Helvetica Neue", sans-serif;
-  font-size: 1em;
-  /* default: 16px = 1em */
+  font-size: 1rem;
   font-weight: normal;
   letter-spacing: 0; }
 
 a {
-  color: blue;
+  color: #000;
   text-decoration: none; }
-
-img {
-  max-width: 100%;
-  display: block; }
-
-#logo {
-  text-indent: -9999em;
-  display: block;
-  width: 100px;
-  position: fixed;
-  top: 20px;
-  left: 20px; }
-  #logo a {
-    display: block;
-    width: 60px;
-    height: 60px;
-    background: url("/assets/elements/logo.png") 0 0 no-repeat;
-    background: url("/assets/elements/logo.svg") 0 0 no-repeat, linear-gradient(transparent, transparent); }
-    #logo a:hover {
-      opacity: 0.7;
-      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-      /* IE 8 */
-      filter: alpha(opacity=70);
-      /* IE 5-7 */ }
+  a:focus, a:hover {
+    outline: none;
+    color: #ccc; }
 
 /*! Typebase.less v0.1.0 | MIT License */
 /* Setup */
@@ -462,30 +443,39 @@ html {
 
 /* Copy & Lists */
 p {
-  line-height: 1.5rem;
-  margin-top: 1.5rem;
-  margin-bottom: 0; }
+  line-height: 1.5;
+  margin: 1.5rem 0 0 0; }
 
 ul,
 ol {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem; }
+  margin: 1.5rem 0; }
 
 ul li,
 ol li {
-  line-height: 1.5rem; }
+  line-height: 1.5; }
 
 ul ul,
 ol ul,
 ul ol,
 ol ol {
-  margin-top: 0;
-  margin-bottom: 0; }
+  margin: 0; }
+
+nav ul {
+  list-style: none;
+  padding: none;
+  padding: 0; }
+
+nav li {
+  display: inline; }
+
+nav a {
+  text-decoration: none;
+  border: none;
+  outline: none; }
 
 blockquote {
-  line-height: 1.5rem;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem; }
+  line-height: 1.5;
+  margin: 1.5rem 0; }
 
 /* Headings */
 h1,
@@ -495,10 +485,8 @@ h4,
 h5,
 h6 {
   font-family: "Montserrat", "Helvetica Neue", sans-serif;
-  margin-top: 1.5rem;
-  margin-bottom: 0;
-  line-height: 1;
-  text-align: center; }
+  margin: 1.5rem 0 0 0;
+  line-height: 1; }
 
 h1 {
   font-size: 3rem;
@@ -512,19 +500,18 @@ h2 {
 h3 {
   font-size: 1.5rem; }
 
-h4, h5 {
+h4 {
   font-size: 1rem; }
 
 /* Tables */
 table {
-  margin-top: 1.5rem;
-  border-spacing: 0px;
+  margin: 1.5rem 0 0 0;
+  border-spacing: 0;
   border-collapse: collapse; }
 
 table td,
 table th {
-  padding: 0;
-  line-height: 33px; }
+  padding: 0; }
 
 /* Code blocks */
 code {
@@ -532,7 +519,7 @@ code {
 
 /* Leading paragraph text */
 .lead {
-  font-size: 1.414rem; }
+  font-size: 1.5rem; }
 
 /* Hug the block above you */
 .hug {
@@ -548,135 +535,101 @@ code {
 strong {
   font-weight: bold; }
 
-#wrap {
-  margin: 0 auto;
-  padding: 0 20px;
-  width: 100%; }
-
-.outer {
-  max-width: 960px;
-  min-width: 700px;
-  margin: 0 auto; }
-
-.inner {
-  width: 700px;
-  margin: 0 auto; }
-
-@media screen and (max-width: 819px) {
-  .outer {
-    min-width: auto; }
-  .inner {
-    width: auto;
-    min-width: auto; } }
-
-#content {
-  clear: both;
-  padding: 4em 0; }
-
-.menu-wrap {
-  float: left;
-  width: calc(100% + 40px);
-  height: 100px;
-  margin: 0 -20px;
-  -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.25);
-  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.25); }
-
-#navicon {
-  text-indent: -9999em;
-  float: right;
-  display: block;
-  width: 40px;
-  height: 30px;
-  background: url("/assets/elements/menu_icon.svg") 0 0 no-repeat;
-  position: relative;
-  top: 35px;
-  right: 20px; }
-
-.shown {
-  display: block; }
-
-@media screen and (max-width: 819px) {
-  .hidden {
-    display: none !important; } }
-
-#mainnav {
-  clear: both;
-  width: 100%; }
-  #mainnav ul {
-    list-style: none;
-    padding: none;
-    padding: 0; }
-  #mainnav li {
-    flex-grow: 1;
-    font-family: "Montserrat", "Helvetica Neue", sans-serif;
-    font-size: 0.8em;
-    text-transform: uppercase;
-    letter-spacing: 0.2em; }
-    #mainnav li a {
-      display: block;
-      color: #000;
-      -webkit-transition: all 0.3s ease;
-      -moz-transition: all 0.3s ease;
-      -ms-transition: all 0.3s ease;
-      -o-transition: all 0.3s ease;
-      transition: all 0.3s ease; }
-  #mainnav li.current a,
-  #mainnav li a:hover {
-    opacity: 0.7;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-    /* IE 8 */
-    filter: alpha(opacity=70);
-    /* IE 5-7 */ }
-
-@media screen and (max-width: 819px) {
-  #mainnav {
-    position: relative;
-    top: 70px;
-    background: #fff;
-    z-index: 99; }
-    #mainnav ul {
-      text-align: center;
-      border-top: 1px solid #efefef; }
-    #mainnav li {
-      border-bottom: 1px solid #efefef; }
-    #mainnav a {
-      padding: 2em 0; }
-    #mainnav li.current a,
-    #mainnav li a:hover {
-      background: #efefef; }
-  #mainnav.active {
-    max-height: 24em; } }
-
 @media screen and (min-width: 820px) {
-  #navicon {
-    display: none;
-    height: 0; }
-  #mainnav {
-    margin: 40px 0; }
-    #mainnav ul {
-      display: flex;
-      flex-direction: row; }
-    #mainnav li {
-      display: inline-block;
-      text-align: center;
-      margin: 0 0.5em; } }
+  .outer {
+    max-width: 960px;
+    min-width: 700px;
+    margin: 0 auto; }
+  .inner {
+    width: 700px;
+    margin: 0 auto; } }
+
+/* Sticky footer */
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 0 20px; }
+
+main {
+  flex: 1 0 auto; }
 
 footer {
-  border-top: 1px solid #efefef;
-  padding: 2em 0;
-  margin-top: 8em; }
-  footer ul {
-    list-style: none;
-    margin: 0;
-    text-align: center; }
-  footer li {
-    display: inline;
-    margin: 0 1em;
-    font-family: "Montserrat", "Helvetica Neue", sans-serif;
-    font-size: 0.8em;
-    text-transform: uppercase;
-    letter-spacing: 0.2em; }
-    footer li a {
-      color: #807f7f;
-      text-transform: uppercase; }
+  flex-shrink: 0; }
+
+header {
+  margin: 20px 0; }
+
+.mainnav li {
+  font-family: "Montserrat", "Helvetica Neue", sans-serif;
+  line-height: 1; }
+  .mainnav li a {
+    display: block;
+    color: #000;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease; }
+
+.mainnav li.current a,
+.mainnav li a:hover {
+  opacity: 0.7;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
+  /* IE 8 */
+  filter: alpha(opacity=70);
+  /* IE 5-7 */ }
+
+.mainnav__home,
+.mainnav__menu {
+  margin: 0; }
+
+.mainnav__home {
+  display: inline;
+  font-size: 1rem; }
+  .mainnav__home a {
+    text-decoration: none; }
+
+@media screen and (max-width: 640px) {
+  #navicon {
+    position: absolute;
+    right: 20px;
+    z-index: 2; }
+    #navicon:hover {
+      border-bottom: 1px solid; }
+  .mainnav {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 20px;
+    background: #fff;
+    z-index: 1; }
+  .mainnav--closed {
+    height: auto;
+    position: inline;
+    background: transparent; }
+  .mainnav__menu {
+    margin-top: 20px; }
+  .mainnav--closed .mainnav__menu {
+    display: none; } }
+
+@media screen and (min-width: 641px) {
+  #navicon {
+    display: none; }
+  .mainnav nav {
+    width: 100%;
+    display: flex; }
+  .mainnav__menu {
+    margin-left: auto; }
+    .mainnav__menu ul {
+      display: flex;
+      flex-direction: row; }
+    .mainnav__menu li {
+      display: inline-block;
+      margin: 0 1rem 0 0; } }
+
+footer li {
+  margin: 0 1rem 0 0; }
