--- a/assets/css/partials/_layout.scss
+++ b/assets/css/partials/_layout.scss
@@ -1,31 +1,30 @@
-#wrap {
+@media screen and (min-width: 820px) {
+  .outer {
+    max-width: 960px;
+    min-width: 700px;
+    margin: 0 auto;
+  }
+
+  .inner {
+    width: 700px;
+    margin: 0 auto;
+  }
+}
+
+/* Sticky footer */
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   padding: 0 20px;
-  width: 100%;
 }
 
-.outer {
-  max-width: 960px;
-  min-width: 700px;
-  margin: 0 auto;
+main {
+  flex: 1 0 auto;
 }
 
-.inner {
-  width: 700px;
-  margin: 0 auto;
-}
-
-@media screen and (max-width: 819px) {
-  .outer {
-    min-width: auto;
-  }
-  .inner {
-    width: auto;
-    min-width: auto;
-  }
-}
-
-#content {
-  clear: both;
-  padding: 4em 0;
+footer {
+  flex-shrink: 0;
 }
