--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -422,7 +422,7 @@ html {
 
 body {
   color: #000;
-  font-family: "Montserrat", "Helvetica Neue", sans-serif;
+  font-family: "Roboto", "Helvetica Neue", sans-serif;
   font-size: 1rem;
   font-weight: normal;
   letter-spacing: 0; }
@@ -484,7 +484,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", "Helvetica Neue", sans-serif;
+  font-family: "Roboto", "Helvetica Neue", sans-serif;
   margin: 1.5rem 0 0 0;
   line-height: 1; }
 
@@ -562,7 +562,7 @@ header {
   margin: 20px 0; }
 
 .mainnav li {
-  font-family: "Montserrat", "Helvetica Neue", sans-serif;
+  font-family: "Roboto", "Helvetica Neue", sans-serif;
   line-height: 1; }
   .mainnav li a {
     display: block;
