--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,3 +11,6 @@
 @import "partials/layout";
 @import "partials/nav";
 @import "partials/footer";
+
+/* dist libraries */
+@import "dist/hamburgers/hamburgers";
